PyMaker/datas/object2/RawHTML/i8801/Python_DOC_referPages.python-3-5-async-keyword.txt
<div class="post-text" itemprop="text">
<p>I am currently looking into <a href="https://pypi.python.org/pypi/pulsar" rel="nofollow noreferrer"><code>pulsar</code></a> for an asynchronous HTTP client.</p>
<p>The following example is in the docs:</p>
<pre><code>from pulsar.apps import http

async with http.HttpClient() as session:
    response1 = await session.get('https://github.com/timeline.json')
    response2 = await session.get('https://api.github.com/emojis.json')
</code></pre>
<p>but when I try to execute it I get </p>
<pre><code>async with http.HttpClient() as session:
         ^ SyntaxError: invalid syntax
</code></pre>
<p>It looks like the <code>async</code> keyword is not recognized. I am using Python 3.5.</p>
<p><strong>Working example:</strong></p>
<pre><code>import asyncio

from pulsar.apps.http import HttpClient

async def my_fun():
                    async with HttpClient() as session:
                        response1 = await session.get('https://github.com/timeline.json')
                        response2 = await session.get('https://api.github.com/emojis.json')

                    print(response1)
                    print(response2)


loop  =  asyncio.get_event_loop() 
loop.run_until_complete(my_fun())
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>you can only use <code>async with</code> inside a <a href="https://docs.python.org/3/reference/compound_stmts.html#coroutines" rel="nofollow noreferrer">coroutines</a>, so you have to do this</p>
<pre><code>from pulsar.apps.http import HttpClient
import pulsar

async def my_fun():
    async with HttpClient() as session:
        response1 = await session.get('https://github.com/timeline.json')
        response2 = await session.get('https://api.github.com/emojis.json')
    return response1, response2 

loop  =  pulsar.get_event_loop() 
res1, res2 = loop.run_until_complete(my_fun()) 
print(res1)
print(res2)
</code></pre>
<p>internally pulsar use asyncio, so you don't have to import it explicitly to use it, use it through pulsar</p>
<hr/>
<p>as a side note, if you upgrade to <a href="https://docs.python.org/3/whatsnew/3.6.html#whatsnew36-pep530" rel="nofollow noreferrer">python 3.6</a> you can use async list/set/etc comprehension</p>
<pre><code>from pulsar.apps.http import HttpClient
import pulsar

async def my_fun():
    async with HttpClient() as session:
        urls=['https://github.com/timeline.json','https://api.github.com/emojis.json']
        return [ await session.get(url) for url in urls]

loop  =  pulsar.get_event_loop() 
res1, res2 = loop.run_until_complete(my_fun()) 
print(res1)
print(res2)
</code></pre>
</div>
<span class="comment-copy">Are you absolutely <i>certain</i> you're using python 3.5?</span>
<span class="comment-copy">$ python3 Python 3.5.2 (default, Nov 17 2016, 17:05:23)</span>
<span class="comment-copy">Try <code>from pulsar.apps.http import HttpClient</code> and <code>async with HttpClient()</code> to see if the error changes.</span>
<span class="comment-copy">What is the exact command that triggers the above error?</span>
<span class="comment-copy">@BrandonIbbotson i tried as suggested, get the same error async wit<b>h</b> HttpClient() as session:  i marked where the ^ is positioned</span>
<span class="comment-copy">i added a solution which is working, is there a way to do this without the asyncio event loop, or is this the correct way?</span>
<span class="comment-copy">if I understand it correctly, they are <a href="https://docs.python.org/3/whatsnew/3.5.html#pep-492-coroutines-with-async-and-await-syntax" rel="nofollow noreferrer">intended</a> for use with <a href="https://docs.python.org/3/library/asyncio.html#module-asyncio" rel="nofollow noreferrer">asyncio</a>, but any other library that support coroutines should work just fine, I think...</span>
<span class="comment-copy">also you can use get_event_loop through pulsar</span>
